# gemm-kernel

./: CMakeLists.txt  README.md
atlas_memory/docs/: memory_contract.md
atlas_memory/include/atlas_memory/: config_m2.hpp  layout.hpp  packing.hpp  workspace.hpp
atlas_memory/src/: layout.cpp  packing_a.cpp  packing_b.cpp  workspace.cpp
gemm/: kernel_config.hpp  kernels.hpp  v0_naive.cpp  v1_loop_reorder.cpp  v2_blocked.cpp  v3_scalar_tile.cpp  v4_neon_4x4.cpp  v4_neon_8x8.cpp  v5_packed.cpp  v6_parallel.cpp
tests/: benchmark_common.hpp  benchmark_gemm_v0.cpp  benchmark_gemm_v1.cpp  benchmark_gemm_v2.cpp  benchmark_gemm_v3.cpp  benchmark_gemm_v4_4x4.cpp  benchmark_gemm_v4_8x8.cpp  benchmark_gemm_v5.cpp  benchmark_gemm_v6.cpp  benchmark_naive_vs_packed.cpp  gemm_benchmark_utils.hpp  test_basic_blocked_gemm.cpp  test_gemm_correctness.cpp  test_layout_and_alignment.cpp  test_layout_math.cpp  test_multiple_block_configs.cpp  test_packing_correctness.cpp  test_reset_behavior.cpp  test_stress_allocation.cpp  test_vs_blas.cpp
